src/core/semantic_analysis/hir/snapshots/blueberry__core__semantic_analysis__hir__dumper__tests__hir_dump@break.bb.snap
---
source: src/core/semantic_analysis/hir/dumper.rs
expression: "HirDumper::dump_file(&db, file)"
input_file: src/core/syntactic_analysis/snapshot_inputs/break.bb
---
function f()
└─ Block
   └─ tail: Loop Loop
      └─ Block
         ├─ Expression ;
         │  └─ Break
         └─ Expression ;
            └─ Break
               └─ Binary +
                  ├─ Integer 1
                  └─ Integer 2
