src/core/semantic_analysis/hir/snapshots/blueberry__core__semantic_analysis__hir__dumper__tests__hir_dump@calls.bb.snap
---
source: src/core/semantic_analysis/hir/dumper.rs
expression: "HirDumper::dump_file(&db, file)"
input_file: src/core/syntactic_analysis/snapshot_inputs/calls.bb
---
function main()
└─ Block
   ├─ Expression ;
   │  └─ Binary +
   │     ├─ Unary -
   │     │  └─ Call
   │     │     └─ callee: Path f
   │     └─ Call
   │        ├─ callee: Path g
   │        ├─ argument: Path x
   │        └─ argument: Path y
   ├─ Expression ;
   │  └─ Call
   │     └─ callee: Call
   │        └─ callee: Path h
   └─ Expression ;
      └─ Call
         ├─ callee: Path k
         └─ argument: Path x
