src/core/semantic_analysis/hir/snapshots/blueberry__core__semantic_analysis__hir__dumper__tests__hir_dump@function.bb.snap
---
source: src/core/semantic_analysis/hir_dumper.rs
expression: "HirDumper::dump_file(&db, file)"
input_file: src/core/syntactic_analysis/snapshot_inputs/function.bb
---
function f()
└─ Block

function g() -> I32
└─ Block
   └─ tail: Integer 1

function no_params()
└─ Block

function no_body()
└─ Error

function neither()
└─ Error

function last()
└─ Block
