src/core/semantic_analysis/hir/snapshots/blueberry__core__semantic_analysis__hir__dumper__tests__hir_dump@import.bb.snap
---
source: src/core/semantic_analysis/hir/dumper.rs
expression: "HirDumper::dump_file(&db, file)"
input_file: src/core/syntactic_analysis/snapshot_inputs/import.bb
---
function main()
└─ Block

function g()
└─ Block
